# unvm

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS  LICENSE.txt  README  README.md  THIRD_PARTY_NOTICES.txt  readme.md  vcpkg.json
.github/: changelog-config.json
.github/workflows/: cmake.yaml
cmake/: create_links.cmake
completions/: unvm-completion.sh
data/: keyring.pgp
definitions/: version.h.in
include/: assert.hxx  env.hxx  http.hxx  json.hxx  link.hxx  path.hxx  semver.hxx  table.hxx  url.hxx  util.hxx
include/unvm/: config.hxx  data.hxx  http.hxx  json.hxx  lock.hxx  pgp.hxx  semver.hxx  table.hxx  unvm.hxx  util.hxx  version.hxx
include/unvm/http/: http.hxx  url.hxx
src/: complete.cxx  config_file.cxx  data.cxx  data_directory.cxx  execute.cxx  file.cxx  find_active_version.cxx  find_effective_version.cxx  http.cxx  install.cxx  json.cxx  list.cxx  load_version_table.cxx  lock.cxx  main.cxx  pgp.cxx  print_manual.cxx  remove.cxx  semver.cxx  ssl_error.cxx  string.cxx  table.cxx  tracked.cxx  unpack.cxx  update.cxx  use.cxx  version_file.cxx  workspace.cxx
src/darwin/: env.cxx  link.cxx  path.cxx
src/linux/: env.cxx  link.cxx  path.cxx
src/pgp/: create_public_key.cxx  describe_subpacket.cxx  match_public_key.cxx  mpi_iterable.cxx  mpi_iterator.cxx  normalize_mpi.cxx  packet_header.cxx  parse_fingerprint.cxx  parse_keyring.cxx  parse_public_key.cxx  parse_signature.cxx  parse_subpacket.cxx  subpacket_iterable.cxx  subpacket_iterator.cxx  subpacket_set_v4.cxx  subpacket_set_v6.cxx  to_string.cxx  verify_signature.cxx
src/unix/: env.cxx  link.cxx  path.cxx
src/win32/: env.cxx  http.cxx  link.cxx  path.cxx
src/windows/: env.cxx  link.cxx  path.cxx
ssl/: nodejs.pem
